# Habits-OS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
apps/admin/: README.md  package.json  pnpm-lock.yaml  proxy.ts
apps/api/: config.py  deps.py  errors.py  main.py  scheduler.py
apps/design-docs/: Design Direction.html  Design System Handoff.html
apps/ios/: README.md
data/: sample_events.json  sample_month.json
docs/: api.md  automation.md  integration_blueprint.md  integration_examples.md  integration_template.md  new_integration_agent_prompt.md  persistence.md  remarkable_sync.md  whoop_integration.md
docs/integrations/: dayone.md
scripts/: api_json.sh  restart_service.sh  run_habitos_api.sh  update_service.sh
tests/: test_render_smoke.py
tests/api/: conftest.py  test_automation_remarkable_failure.py  test_automation_routes.py  test_automation_service.py  test_dayone_sync_service.py  test_flow.py  test_habit_catalog.py  test_habit_catalog_reconcile.py  test_habit_evaluation_service.py  test_health.py  test_medication_events.py  test_month_state_service.py  test_pipeline_service.py  test_route_registration.py  test_scheduler.py  test_whoop_routes.py
tests/connectors/: test_base_contract.py  test_dayone_normalizer.py  test_dayone_sqlite_reader.py  test_whoop_auth.py  test_whoop_client.py  test_whoop_normalizer.py
tests/core/: test_config.py  test_evaluate_month.py  test_models.py  test_repo_base.py  test_rules.py
tests/sync/: _bundle_factory.py  test_manual_sync.py  test_remarkable_lifecycle_service.py  (+3 more)
(+116 files in other folders)
