[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "habitos"
version = "0.1.0"
description = "Local-first habit dashboard generator for reMarkable 2."
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "playwright>=1.42",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]
