[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "habitos"
version = "0.1.0"
description = "Local-first habit dashboard generator for reMarkable 2."
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "playwright>=1.42",
    "pypdf>=4.0",
    "pydantic>=2.6",
    "pymongo[srv]>=4.9",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "asgi-lifespan>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]
